<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:scaleType="centerCrop"
    android:visibility="visible"
    tools:context="com.umut.soysal.ui.SubMainActivity">
    <!-- Nút Đăng xuất -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <!-- Phần tử 1 (Hình ảnh và Text) -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/parent_layout"
                android:layout_width="36dp"
                android:layout_height="36dp"
                app:cardCornerRadius="10000dp">

                <ImageView
                    android:id="@+id/view_photo_account"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:contentDescription="@string/anh_trong"
                    android:scaleType="centerCrop"
                    app:cardCornerRadius="10000dp" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textUserNameAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mdtp_transparent_black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textEmailAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mdtp_transparent_black"
                    android:textSize="14sp"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>

        <!-- Phần tử 2 (Nút Setting) -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_settings_52"
                android:contentDescription="@string/todo" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_banner_stid"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="40dp"
            android:gravity="center|end"
            android:src="@drawable/logo_stid"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x_c_th_c_th_c_n_c_c_c_ng_d_n"
            android:textColor="#0065a1"
            android:textSize="18sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/buttonQrCode"
            style="@style/loginButton"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="180dp"
            android:elevation="1dp"
            android:text="@string/scan_qr"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttonCAN"
            style="@style/loginButton"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:elevation="1dp"
            android:text="@string/nh_p_6_s_cu_i_cccd"
            android:textSize="16sp" />
    </LinearLayout>
</FrameLayout>